Next Release

  - Per-process exitcodes= configuration now will not accept exit
    codes that are integers above 255 (supervisord will not start when
    one of the exit codes is outside the range of 0 - 255).

  - Per-process 'directory' value can now contain expandable values
    like %(here)s. (See http://www.plope.com/software/collector/262).

  - Accepted patch from Roger Hoover to allow for a new sort of
    process group: "fcgi-program".  Adding one of these to your
    supervisord.conf allows you to control fastcgi programs.  FastCGI
    programs cannot belong to heterogenous groups.

    The configuration for FastCGI programs is the same as regular
    programs except an additional "socket" parameter.  Substitution
    happens on the socket parameter with the 'here' and 'program_name'
    variables::

     [fcgi-program:fcgi_test]
     ;socket=tcp://localhost:8002
     socket=unix:///path/to/fcgi/socket

  - Supervisorctl now supports a plugin model for supervisorctl
    commands.

  - Added the ability to retrieve supervisord's own pid through
    supervisor.getPID() on the XML-RPC interface or a new
    "pid" command on supervisorctl.

3.0a6

  - The RotatingFileLogger had a race condition in its doRollover
    method whereby a file might not actually exist despite a call to
    os.path.exists on the line above a place where we try to remove
    it.  We catch the exception now and ignore the missing file.

3.0a5

  - Supervisorctl now supports persistent readline history.  To
    enable, add "history_file = <pathname>" to the '[supervisorctl']
    section in your supervisord.conf file.

  - Multiple commands may now be issued on one supervisorctl command
    line, e.g. "restart prog; tail -f prog".  Separate commands with a
    single semicolon; they will be executed in order as you would
    expect.

3.0a4

  - 3.0a3 broke Python 2.3 backwards compatibility.

  - On Debian Sarge, one user reported that a call to