@@ -1,5 +1,9 @@
 Next Release
 
+  - childutils.eventdata was buggy, it could not deal with carriage returns
+    in data.  See http://www.plope.com/software/collector/257.  Thanks
+    to Ian Bicking.
+
   - Per-process exitcodes= configuration now will not accept exit
     codes that are integers above 255 (supervisord will not start when
     one of the exit codes is outside the range of 0 - 255).
